Start integrating website

--- a/www/static/how_to.html
+++ b/www/static/how_to.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>How to play</title>
 </head>
 <body>
-<a href="/new_draft">Start a new draft</a>
+This is the how-to page.
 </body>
 </html>
