--- a/www/draft_template.html
+++ b/www/draft_template.html
@@ -6,7 +6,40 @@
 </head>
 <body>
 
-<button type="button" onclick="sendPick(3)">Click Me!</button>
+{{#if joining_players}}
+<p>Joined players: </p>
+{{/if}}
+
+{{#each joining_players}}
+<li>{{this}}</li>
+{{/each}}
+
+{{#each open_slots}}
+<li>Open Slot</li>
+{{/each}}
+
+{{#if joining_players}}
+<button type="button" onclick="startGame()">Start Game</button>
+{{/if}}
+
+{{#if pending_picks}}
+<p>Pending picks: </p>
+{{/if}}
+{{#each pending_picks}}
+<article>
+{{this.pokepaste}}
+<button type="button" onclick="sendPick({{this.draft_id}})">Pick</button>
+</article>
+{{/each}}
+
+{{#if allocated_picks}}
+<p>Allocated picks: </p>
+{{/if}}
+{{#each allocated_picks}}
+<article>
+{{{this}}}
+</article>
+{{/each}}
 
 <script>
 function sendPick(pick_id) {
@@ -14,14 +47,15 @@ function sendPick(pick_id) {
         command: "pick",
         lobby_id: {{lobby_id}},
         player_id: {{player_id}},
-        pick_id: pick_id
+        pick_id: pick_id,
+        game_state: {{game_state}},
     }
     fetch("{{url_for_draft}}", {
         method: "POST",
         headers: {'Content-Type': 'application/json'},
         body: JSON.stringify(data)
     }).then(res => {
-        console.log("Request complete! response:", res);
+        console.log("Request complete. Response:", res);
     });
 }
 
@@ -29,15 +63,38 @@ function startGame() {
     let data = {
         command: "start_game",
         lobby_id: {{lobby_id}},
-}
+        player_id: {{player_id}},
+        pick_id: 0,
+        game_state: {{game_state}},
+    }
     fetch("{{url_for_draft}}", {
         method: "POST",
         headers: {'Content-Type': 'application/json'},
         body: JSON.stringify(data)
     }).then(res => {
-        console.log("Request complete! response:", res);
+        console.log("Request complete. Response:", res);
     });
 }
+
+function pollGame() {
+    let data = {
+        command: "poll",
+        lobby_id: {{lobby_id}},
+        player_id: {{player_id}},
+        pick_id: 0,
+        game_state: {{game_state}},
+    }
+    fetch("{{url_for_draft}}", {
+        method: "POST",
+        headers: {'Content-Type': 'application/json'},
+        body: JSON.stringify(data)
+    }).then(res => {
+        console.log("Request complete, refreshing:");
+        location.reload()
+    });
+}
+pollGame()
+
 </script>
 
 </body>
