--- a/www/join_game_template.html
+++ b/www/join_game_template.html
@@ -7,7 +7,7 @@
 <body>
 This is the join game template.
 
-<form action={{url_to_submit}} method="POST">
+<form method="POST">
   <div>
     <label for="player_name">Player Name</label>
     <input name="player_name" id="player_name" value=""  minlength="1" maxlength="20" required/>
