--- a/www/share_game_template.html
+++ b/www/share_game_template.html
@@ -6,11 +6,10 @@
 </head>
 <body>
 This is the share game template.
-
 Share this link with your draft friends:
 
 <p>
-<a href="{{share_url}}" target="_blank" rel="noopener noreferrer">{{share_url}}</a>
+<a href="/join_draft/{{lobby_id}}" target="_blank" rel="noopener noreferrer">Here's the link</a>
 </p>
 
 </body>
