--- a/www/share_game_template.html
+++ b/www/share_game_template.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>New Game Created</title>
+  <link rel="stylesheet" href="/static/css/main.css">
 </head>
 <body>
-This is the share game template.
-Share this link with your draft friends:
+<p>You've started a new draft.</p>
 
 <p>
-<a href="/join_draft/{{lobby_id}}" target="_blank" rel="noopener noreferrer">Here's the link</a>
+<a href="/join_draft/{{lobby_id}}" target="_blank" rel="noopener noreferrer">Here's the link to your lobby</a>
 </p>
+
+<p>Share the join link above with your friends. Follow it yourself to join the lobby, it opens in a new tab.</p>
 
 </body>
 </html>
