--- a/www/static/how_to.html
+++ b/www/static/how_to.html
@@ -1,10 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>How to play</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="/static/css/main.css">
+    <title>How to draft</title>
 </head>
-<body>
-This is the how-to page.
+<style>
+    p {
+        font-family: serif;
+    }
+</style>
+
+<body style="text-align: justify">
+<h2><i>An Introduction to Pokemon Draft</i></h2>
+
+<p>
+    Here's the overall plan:</p>
+<li>You get together with some friends to make a group of 2-6 people</li>
+<li>You all draft pokemon from a pool and use them to build a team</li>
+<li>You battle each other with the teams you made</li>
+
+<p>But given that you're reading this, you probably want the juicy details.
+    As a tip: you can start a draft with only 1 Player to get a feel for how the system works.
+</p>
+
+<h3>What are we drafting?</h3>
+
+<p>Each time you make a draft pick you're selecting a 'complete' Pokemon: all its stats, moves, and items have been
+    pre-selected for you. What you click on in the draft is what you get!</p>
+
+<p>Each Pokemon in the draft is unique. They're drawn from a pool of about 120 different sets that I've put
+    together.</p>
+
+<h3>How does drafting work?</h3>
+
+<p>A draft consists of some number of rounds, and at the start of each round every player opens a 'pack' of Pokemon.
+    The number of rounds and the number of Pokemon in each pack both depend on how many players are in the lobby.
+</p>
+
+<p>You get to pick one Pokemon from your pack, and then you 'pass' the pack to the player next in the draft order
+    from you. You'll then receive a pack from the person before you in the order, which you will take one Pokemon from
+    and pass on, and so on. Once all the packs are empty, the next round starts. After all the rounds are done, you can
+    build your team.</p>
+
+<h3>How do I build a team?</h3>
+
+<p>You'll have drafted somewhere between 12 and 18 Pokemon depending on the number of players in the lobby. A Pokemon
+    team has 6 members, so you'll need to think about which to include in your final team.</p>
+
+<p>We're using a self-hosted version of Pokemon showdown, which you can also build your team on. Follow the steps
+    below.</p>
+
+<h3>Using Pokemon showdown</h3>
+
+<p>
+    Visit the draft <a href="todo">Pokemon showdown instance</a> and select a username using the button in the top right
+    corner. Your username needs to be unique among all Pokemon showdown users, even the official instance, because
+    authentication routes through their servers. Once you have a name, open the team builder.
+</p>
+
+<div><img width=700px src="img/howto_1.png"></img></div>
+
+<p>
+    Select 'New Team'. Then, from the 'Format' drop down select '[gen9] draft rules' (the only option). Click 'Import
+    from text', and then go to your draft page and copy the sets for the Pokemon you drafted. Paste these into the
+    teambuilder's import field.
+</p>
+
+<div><img width=700px src="img/howto_2.png"></img></div>
+
+<p>
+    You'll now need to delete entries from your team until you have the 6 Pokemon that make up your final team.
+    <span style="color: red;"><b>DO NOT CHANGE THE MOVES, STATS, ABILITIES, ITEMS, ETC. OF THE POKEMON YOU DRAFTED. THAT'S CHEATING!</b></span>
+</p>
+
+<p>
+    Once you're happy with your final selection, give your team a name and return to 'Home' in Pokemon showdown.
+    You're now ready to battle other players! You can either click the 'Battle!' button to find a random opponent who
+    has also clicked this button, or you can use the chat command '/challenge' to issue a direct
+    challenge to someone in your draft group.
+</p>
+
+<h3>Which Pokemon Should I Draft?</h3>
+<p>The Pokemon in the pool to draft from range in power level from RU to OU, with most Pokemon having been in the OU
+    tier for at least one generation in the last decade. This means that while some individual Pokemon may be 'better'
+    than others in a complete vacuum, you should focus on building a cohesive team.</p>
+
+<p>You should look for Pokemon that complement each other. For example, if you pick up a Pokemon that changes the
+    weather or terrain, look for other Pokemon that would benefit from that effect.</p>
+
+<p>You should look to sure-up weaknesses: make sure you have a variety of attacking and defensive types.</p>
+
+<p>Finally, you should look to screw over the other people in the draft. If you have the opportunity to take a specific
+    Pokemon that would cause serious problems for your team, consider taking it so that your opponents can't have
+    it!</p>
+
 </body>
 </html>
