--- a/www/static/index.html
+++ b/www/static/index.html
@@ -2,9 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <link rel="stylesheet" href="/static/css/main.css">
+  <title>Pokemon Drafting!</title>
 </head>
-<body>
-<a href="/new_draft">Start a new draft</a>
+
+<body style="text-align: justify">
+
+<h2><i>Draft competitive Pokemon with your friends!</i></h2>
+
+<p>
+  If you want to find out how this draft format works, including how to play after you've drafted your team,
+  read the introduction <a href="/static/how_to.html"> here</a>.</p>
+
+<p>If you're trying to join a draft, the person who created the draft should have sent you a link to join their lobby.
+  If you'd like to create a new lobby for your friends to join you can use the link below.
+</p>
+
+<p style="text-align: center"><a href="/new_draft">Start a new draft</a></p>
+
+<p>If you've never battled other human players before, you can read a quick primer on how to approach strategy <a href="https://www.smogon.com/articles/getting-started">here</a>.</p>
 </body>
 </html>
