--- a/www/static/how_to.html
+++ b/www/static/how_to.html
@@ -54,7 +54,7 @@
 <h3>Using Pokemon showdown</h3>
 
 <p>
-    Visit the draft <a href="todo">Pokemon showdown instance</a> and select a username using the button in the top right
+    Visit the draft <a href="http://happylittleneurons.com.psim.us/">Pokemon showdown instance</a> and select a username using the button in the top right
     corner. Your username needs to be unique among all Pokemon showdown users, even the official instance, because
     authentication routes through their servers. Once you have a name, open the team builder.
 </p>
