--- a/www/static/index.html
+++ b/www/static/index.html
@@ -20,6 +20,10 @@
 
 <p style="text-align: center"><a href="/new_draft">Start a new draft</a></p>
 
+<p style="text-align: center"><a href="http://happylittleneurons.com.psim.us/" target="_blank" rel="noopener noreferrer">Launch battle client</a>*</p>
+
 <p>If you've never battled other human players before, you can read a quick primer on how to approach strategy <a href="https://www.smogon.com/articles/getting-started">here</a>.</p>
+
+<p>* No support for HTTPS, which might make your browser sad.</p>
 </body>
 </html>
